@@ -1,3 +1,12 @@
+2005-09-14  Brian Cameron <Brian.Cameron@sun.com>
+
+        * gui/gdmsetup.c: Fix gdmsetup so that when
+          user modifies Include/Exclude list, it also
+          updates automatic/timed login dropdown
+          immediately.
+	* gui/modules/keymouselistener.c: Remove 
+	  incorrect comment.
+
 2005-09-13  Brian Cameron <Brian.Cameron@sun.com>
 
 	* daemon/slave.c, gui/modules/dwellmouselistener.c,
